# reachy_mini_meditation_tutor

./: .gitignore  .gitmodules  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  MEDITATION_GUIDE_SETUP.md  QUICKSTART.md  README.md  README_MIGRATION.md  SETUP_FOR_TEAMMATES.md  index.html  plan.md  pyproject.toml
meditation_guide_profile/: INSTALLATION.md  README.md  __init__.py  breath_sounds.py  configure_meditation.py  instructions.txt  meditation_config.py  meditation_move.py  start_meditation.py  stop_meditation.py  tools.txt
reachy_mini_meditation_tutor/: main.py
reachy_mini_meditation_tutor/static/: index.html  main.js  style.css
