[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy_mini_meditation_tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini"
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_meditation_tutor = "reachy_mini_meditation_tutor.main:ReachyMiniMeditationTutor"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mini_meditation_tutor = ["**/*"] # Also include all non-.py files